# nib

./: .gitignore  BUILD.bazel  MODULE.bazel
bazel/: BUILD.bazel  entt_remove_src_build.patch  remove_gitignore_modification.patch
nib/: BUILD.bazel  app.cc  app.h  client.cc  client.h  common.h  defer.h  device.cc  device.h  event_loop.cc  event_loop.h  main.cc  renderer.cc  renderer.h  result.h  vulkan.cc  vulkan.h
