module(name = "nib")

bazel_dep(name = "rules_cc", version = "0.2.22")
bazel_dep(name = "wolfd_bazel_compile_commands", version = "0.5.2")

bazel_dep(name = "rules_foreign_cc")
git_override(
    module_name = "rules_foreign_cc",
    remote = "https://github.com/bazel-contrib/rules_foreign_cc.git",
    commit = "f68b351c4691e747f889dc5e4c2cac3cd3b66ea2",
)
