load("@rules_cc//cc:defs.bzl", "cc_binary")

COPTS = select({
    "@rules_cc//cc/compiler:msvc-cl": [
        "/std:c++20",
        "/W4",
        "/Zi",
        "/FS",
    ],
    "//conditions:default": [
        "-std=c++20",
        "-Wall",
        "-Wextra",
        "-Wpedantic",
        "-g"
    ],
})

filegroup(
    name = "nib_hdrs",
    srcs = [
        "common.h",
        "defer.h",
        "result.h",
    ],
)

filegroup(
    name = "nib_srcs",
    srcs = [
        "main.cc",
    ],
)

cc_binary(
    name = "nib",
    copts = COPTS,
    srcs = [":nib_srcs", ":nib_hdrs"],
    deps = [
        "@sdl3//:sdl",
        "@glm",
        "@vulkan_headers",
        "@vulkan_loader",
    ],
    visibility = ["//visibility:public"],
)